--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -37,7 +37,7 @@
   .btn {
     display: block;
     width: 35%;
-    margin: 2rem auto 4rem auto;
+    margin: auto;
     text-align: center;
   }
   /* tabs */
@@ -52,7 +52,9 @@
         margin-bottom: 0;
       }
     }
-
+    .cta {
+      margin-bottom: 2rem;
+    }
     .tabs-nav {
       margin-top: 2rem;
       display: grid;
@@ -329,7 +331,7 @@
       text-align: center;
       margin-bottom: 0;
       .cta {
-        margin: 2rem;
+        margin-bottom: 2rem;
       }
       .cta-faq {
         margin: 0rem;
@@ -348,6 +350,9 @@
     }
     span {
       color: $secondary-color;
+    }
+    .cta-faq {
+      margin-top: 2rem;
     }
     .header .text .line {
       border-bottom: 3px solid $secondary-color;
@@ -428,7 +433,7 @@
               color: white;
               // color: $primary-color;
               // font-weight: 600;
-              margin: 1rem 1rem;
+              margin: 2rem 1rem;
               background: $third-color;
               display: grid;
               grid-template-columns: 1fr 3fr 1fr;
@@ -454,18 +459,20 @@
               .text {
                 background: rgba($color: white, $alpha: 0.9);
                 height: 100%;
-                padding: 2rem;
+                padding: 3rem;
                 padding-top: 2rem;
                 color: $primary-color;
                 ul {
                   height: 100%;
                   font-size: larger;
-                  line-height: 4rem;
+                  line-height: 3.5rem;
                   li {
-                    display: flex;
+                    display: grid;
+                    grid-template-columns: 1fr 10fr;
                     align-items: flex-start;
                     justify-content: flex-start;
                     span {
+                      display: block;
                       font-size: larger;
                       width: 4rem;
                       color: $third-color;
